# ngs2-nm-plugin

./: .gitignore  .gitmodules  CMakeLists.txt  README  README-for-users  README.md
core/: CMakeLists.txt  core.cpp  dbghelp.cpp  loader.cpp
doc/: README.txt
docs/: README.txt
effect/: CMakeLists.txt  effect.cpp
effect/gore/: CMakeLists.txt  crush.cpp  gore.hpp  misc.cpp  mutil.cpp
include/: debug.hpp  util.hpp
plugin/: CMakeLists.txt
plugin/core/: CMakeLists.txt  bugfix.cpp  core.cpp  dbghelp.cpp  loader.cpp
plugin/effect/: CMakeLists.txt  crush.cpp  effect.cpp  gore.cpp  gore.hpp  mutil.cpp
plugin/effect/gore/: CMakeLists.txt  crush.cpp  gore.cpp  gore.hpp  misc.cpp  mutil.cpp
src/: CMakeLists.txt  util.hpp
src/combat/: main.cpp
src/core/: CMakeLists.txt  core.cpp  main.cpp
src/effect/: CMakeLists.txt  bloodstamp.cpp  crush.hpp  dismember.hpp  hit.cpp  main.cpp
src/loader/: CMakeLists.txt  loader.cpp  main.cpp
src/plugin/core/: CMakeLists.txt  core.cpp  loader.cpp  qol.cpp  qol.hpp
src/plugin/effect/: CMakeLists.txt  bloodstamp.cpp  bloodstamp.hpp  crush.cpp  dismember.hpp  effect.cpp  hit.cpp  hit.hpp  mutil.cpp  mutil.hpp  rigidbody.hpp
src/plugin/loader/: CMakeLists.txt  loader.cpp  loader.hpp
src/steam-bugfixes/: CMakeLists.txt  main.cpp  steam-bugfixes.cpp
src/util/: util.cpp  util.hpp
util/: hook.hpp  util.cpp  util.hpp
